# rust-experiments

./: Cargo.toml
assets/: cars.json
src/: assertions.rs  car_analysis.rs  car_service.rs  json.rs  lib.rs  product_analysis.rs  product_service.rs
src/common/: app_utils.rs  functions.rs  linq_extensions.rs  mod.rs
