[package]
name = "hellorust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rxrust = "1.0.0-beta.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.70"
itertools = "0.10.5"


[dev-dependencies]
tokio = { version = "1.14", features = ["full"] }
speculoos = "0.11.0"